Perkin-UAT/force-app/main/default/objects/User_Account_History__c/User_Account_History__c.object-meta.xml
<CustomObject>
    <description>Object to track user accounts on a scheduled basis. Analytic snapshot reports export key field information for historical user account management and reporting</description>
    <label>User Account History</label>
    <nameField>
        <label>User Account History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Account Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>