Perkin-UAT/force-app/main/default/objects/User_Account_History__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <label>Business</label>
    <length>30</length>
    <type>Text</type>
</CustomField>