Perkin-UAT/force-app/main/default/objects/User_Account_History__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>