Perkin-UAT/force-app/main/default/objects/User_Account_History__c/fields/Direct_Manager__c.field-meta.xml
<CustomField>
    <fullName>Direct_Manager__c</fullName>
    <label>Direct Manager</label>
    <length>80</length>
    <type>Text</type>
</CustomField>