Perkin-UAT/force-app/main/default/objects/User_Account_History__c/fields/Do_Not_Deactivate__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Deactivate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Deactivate</label>
    <type>Checkbox</type>
</CustomField>