Perkin-UAT/force-app/main/default/objects/User_Account_History__c/fields/Job_Familty__c.field-meta.xml
<CustomField>
    <fullName>Job_Familty__c</fullName>
    <label>Job Familty</label>
    <length>50</length>
    <type>Text</type>
</CustomField>