Perkin-UAT/force-app/main/default/objects/User_Account_History__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <length>80</length>
    <type>Text</type>
</CustomField>