Perkin-UAT/force-app/main/default/objects/User_Account_History__c/fields/Reason_for_Activating__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Activating__c</fullName>
    <label>Reason for Activating</label>
    <type>TextArea</type>
</CustomField>