Perkin-UAT/force-app/main/default/objects/User_Account_History__c/fields/Reason_for_User_Cannot_be_Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_User_Cannot_be_Deactivated__c</fullName>
    <label>Reason for User Cannot be Deactivated</label>
    <type>TextArea</type>
</CustomField>