Perkin-UAT/force-app/main/default/objects/User_Account_History__c/fields/Snapshot_Name__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Name__c</fullName>
    <label>Snapshot Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>