Perkin-UAT/force-app/main/default/objects/User_Account_History__c/fields/Snapshot_Running_User__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Running_User__c</fullName>
    <label>Snapshot Running User</label>
    <type>TextArea</type>
</CustomField>