Perkin-UAT/force-app/main/default/objects/User_Account_History__c/fields/Sub_function__c.field-meta.xml
<CustomField>
    <fullName>Sub_function__c</fullName>
    <label>Sub-function</label>
    <length>50</length>
    <type>Text</type>
</CustomField>