Perkin-UAT/force-app/main/default/objects/User_Account_History__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <label>Username</label>
    <type>Email</type>
</CustomField>